[tool.poetry]
name = "wireguard-bot"
version = "0.1.0"
description = ""
authors = ["PheeZz <jagubkoff@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "wireguard_bot"}]

[tool.poetry.dependencies]
python = "^3.10.5"
aiofiles = "23.1.0"
aiogram = "2.24"
aiohttp = "3.8.3"
aiosignal = "1.3.1"
apscheduler = "3.9.1.post1"
async-timeout = "4.0.2"
attrs = "22.2.0"
babel = "2.9.1"
certifi = "2022.12.7"
charset-normalizer = "2.1.1"
colorama = "0.4.6"
frozenlist = "1.3.3"
idna = "3.4"
install = "1.3.5"
loguru = "0.6.0"
magic-filter = "1.0.9"
multidict = "6.0.4"
packaging = "22.0"
psycopg2-binary = "2.9.5"
pycodestyle = "2.10.0"
python-dotenv = "0.21.0"
pytz = "2022.7"
pytz-deprecation-shim = "0.1.0.post0"
six = "1.16.0"
toml = "0.10.2"
tomli = "2.0.1"
tzdata = "2022.7"
tzlocal = "4.2"
win32-setctime = "1.1.0"
yarl = "1.8.2"
pip = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
